--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.0.1",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"name": "minimal-todo-list",
+	"version": "1.0.0",
+	"description": "Minimal Todo List",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"version": "node version-bump.mjs"
 	},
 	"keywords": [],
-	"author": "",
+	"author": "Brett McGinnis",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
